---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: ????
  Features:
    - Added nearby pollution sensor (disabled by default)
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2021-02-17
  Features:
    - Initial release