@@ -1,5 +1,7 @@
 local misc = require("__flib__.misc")
 
-return function()
+return function(settings)
+  if not settings.show_playtime then return end
+
   return {"", {"statsgui.playtime"}, " = ", misc.ticks_to_timestring(game.ticks_played)}
 end
