@@ -3,6 +3,7 @@ Version: 1.1.0
 Date: ????
   Features:
     - Added nearby pollution sensor (disabled by default)
+    - Added remote interface to allow other mods to add custom sensors
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2021-02-17
